# ecmgui

./: .gitignore  .gitmodules  README.md  pom.xml  run.sh
native/: CMakeLists.txt  nativebridge.c
src/main/java/com/afermiano/ecmgui/: App.java  Context.java  Main.java
src/main/java/com/afermiano/ecmgui/common/: Observable.java  Observer.java
src/main/java/com/afermiano/ecmgui/control/: Control.java
src/main/java/com/afermiano/ecmgui/control/bridge/: Bridge.java  BridgeEvent.java  FakeBridge.java  NativeBridge.java
src/main/java/com/afermiano/ecmgui/gui/: ButtonPanel.java  FilePanel.java  MainWindow.java  PercentagePanel.java
src/main/java/com/afermiano/ecmgui/model/: Model.java
src/main/java/com/afermiano/ecmgui/model/nativemapping/: FailureReason.java  State.java
src/main/java/com/afermiano/ecmgui/util/: FailureReasonMapper.java
src/test/java/com/afermiano/ecmgui/control/: ControlTest.java
